# WasmEdge-evmc

./: .CurrentChangelog.md  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE.spdx  README.md  shell.nix
.github/workflows/: build.yml  release.yml  ssvm.yml
include/: eeibase.h  eeienv.h  eeifunc.h  eeimodule.h
lib/: CMakeLists.txt  eeienv.cpp  eeifunc.cpp  eeimodule.cpp
test/: CMakeLists.txt
test/evmc/: CMakeLists.txt  evmcTest.cpp
test/soll-runtime-test/: soll_runtime_test.cpp
tools/: CMakeLists.txt
tools/soll-runtime-test/: CMakeLists.txt  example_host.cpp  soll_runtime_test.cpp
tools/ssvm-evmc/: CMakeLists.txt  evmccreate.cpp
tools/wasmedge-evmc/: CMakeLists.txt  evmccreate.cpp
utils/: CMakeLists.txt
utils/evmc/lib/instructions/: CMakeLists.txt
utils/evmc/lib/loader/: CMakeLists.txt
utils/keccak/: CMakeLists.txt
